desenvolvimento em mobile-first das section carrosel, topicos e rodape

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,16 @@
 @import url("header.css");
 @import url("banner.css");
 @import url("carrosel.css");
+@import url("topicos.css");
+@import url("contato.css");
+@import url("rodape.css");
 
 :root {
     --branco: #FFFFFF;
     --cor-de-fundo: #EBECEE;
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --azul: #002F52;
     --fonte-principal: "Poppins";
 }
 
