Finalizando a responsividade do header para telas min-width: 1024px

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -57,3 +57,58 @@
     background-clip: text;
     text-transform: uppercase;
 }
+
+.container__titulo {
+    display: none;
+}
+
+.opcoes {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+     .container__titulo, .container__titulo--negrito {
+        font-size: var(--fonte-secundaria);
+        font-size: 30px;
+     }
+
+     .container__titulo {
+        font-weight: 400;
+        display: block;
+     }
+
+     .container__titulo--negrito {
+        font-weight: 700;
+     }
+
+     .opcoes {
+        display: flex;
+     }
+
+     .opcoes__item {
+        padding: 1em;
+        text-transform: uppercase;
+     }
+
+     .opcoes__link {
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .container__imagem--transparente {
+        display: none;
+    }
+
+    .cabecalho__menu--hamburguer {
+        display: none;
+    }
+
+    .opcoes__botao:checked ~ .lista__menu {
+        display: block;
+        width: auto;
+    }
+
+    .opcoes__botao {
+        display: none;
+    }
+}
