--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,12 +6,14 @@
 @import url("rodape.css");
 
 :root {
+    --azul: #002F52;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --branco: #FFFFFF;
     --cor-de-fundo: #EBECEE;
     --laranja: #EB9B00;
-    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
-    --azul: #002F52;
     --fonte-principal: "Poppins";
+    --fonte-secundaria: "Josefin Sans";
+    --preto: #000000;
 }
 
 body {
