Finalizando a responsividade da seção banner e carrosel para telas de min-width: 1024px

--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -33,3 +33,17 @@
     font-weight: 400;
     text-align: center;
 }
+
+@media screen and (min-width: 1024px) {
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 6em;
+    }
+}
