Finalizando o desenvolvimento das seções topicos e contato para telas min-width: 1024px

--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -34,3 +34,24 @@
     font-family: var(--fonte-principal);
     padding-left: 2em;
 }
+
+@media screen and (min-width: 1024px) {
+    .contato {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+    }
+
+    .contato__titulo {
+        font-size: 24px;
+    }
+
+    .contato__descricao {
+        margin: 1em;
+        width: 30%;
+    }
+
+    .contato__email {
+        width: 30%;
+    }
+}
