--- a/assets/css/rodape.css
+++ b/assets/css/rodape.css
@@ -7,3 +7,39 @@ hr {
     padding: 1em;
 }
 
+.lista__rodape {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .rodape {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .lista__rodape {
+        display: block;
+    }
+
+    .rodape__titulo {
+        font-size: 24px;
+    }
+
+    .lista__rodape--titulo {
+        color: var(--cinza-claro);
+        font-size: 14px;
+        text-transform: uppercase;
+    }
+
+    .lista__rodape--item {
+        align-items: center;
+        display: flex;
+        margin: .6em 0;
+    }
+
+    .lista__rodape--link {
+        color: var(--cinza);
+        text-decoration: none;
+        margin-left: .6em;
+    }
+}
