--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,8 @@
     --azul: #002F52;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --branco: #FFFFFF;
+    --cinza-claro: #858585;
+    --cinza: #474646;
     --cor-de-fundo: #EBECEE;
     --laranja: #EB9B00;
     --fonte-principal: "Poppins";
