Desenvolvendo o header para telas min-width 1728px

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -66,6 +66,10 @@
     display: none;
 }
 
+.container__texto {
+    display: none;
+}
+
 @media screen and (min-width: 1024px) {
      .container__titulo, .container__titulo--negrito {
         font-size: var(--fonte-secundaria);
@@ -110,5 +114,25 @@
 
     .opcoes__botao {
         display: none;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .container__link {
+        align-items: center;
+        color: var(--preto);
+        display: flex;
+    }
+
+    .cabecalho {
+        padding: 0 2em;
+    }
+
+    .opcoes {
+        margin-right: auto;
+    }
+
+    .container__texto {
+        display: block;
     }
 }
