--- a/assets/css/carrosel.css
+++ b/assets/css/carrosel.css
@@ -3,7 +3,7 @@
     color: var(--laranja);
     font-size: 18px;
     font-weight: 700;
-    padding: 1em 0 0.5em 0;
+    padding: 1em 0 .5em 0;
     text-align: center;
     text-transform: uppercase;
 }
@@ -18,11 +18,11 @@
 
 .swiper-pagination {
     position: initial;
-    margin: 0.5em 0;
+    margin: .5em 0;
 }
 
 .card {
-    background: #FFFFFF;
+    background: var(--branco);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     margin: 1em;
