Desenvolvimento das seções banner e carrosel para telas de min-width 1728px

--- a/assets/css/carrosel.css
+++ b/assets/css/carrosel.css
@@ -97,3 +97,36 @@
         width: 40%;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .carrosel__container {
+        align-items: center;
+        display: flex;
+        margin: 0 20vw 3em 20vw;
+    }
+
+    .swiper-pagination {
+        margin: 1em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .descricao__titulo {
+        font-size: 32px;
+    }
+
+    .descricao__texto {
+        font-size: 16px;
+    }
+
+    .descricao {
+        margin-right: 3em;
+    }
+
+    .card {
+        width: 70%;
+        margin-left: 3em;
+    }
+}
