--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -47,3 +47,17 @@
         background-position: 6em;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .banner__pesquisa {
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 10em;
+    }
+
+    .banner {
+        padding: 6em 0;
+    }
+}
