--- a/assets/css/rodape.css
+++ b/assets/css/rodape.css
@@ -43,3 +43,14 @@ hr {
         margin-left: .6em;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .rodape {
+        padding: 3em 0;
+    }
+
+    .lista__rodape {
+        border-left: 1px solid var(--cinza-claro);
+        padding-left: 1em;
+    }
+}
